2007-06-24  Daniel Nylander <po@danielnylander.se>

	* plugins/applet/docs/sv/sv.po: Added Swedish translation
	* plugins/applet/docs/sv/legal.xml: Updated translation
	* plugins/applet/docs/sv/seahorse-applet.xml: Updated translation
	* plugins/applet/docs/Makefile.am: Added sv to DOC_LINGUAS

2007-06-22  Stef Walter  <stef@memberwebs.com>

    * Use my real name in copyrights, and proper email address.
    This change touched most files in the project, in comments 
    and strings. 
    
2007-06-22  Adam Schreiber  <sadam@clemson.edu>
    
    * libseahorse/seahorse-ssh-askpass.c: Internationalize properly.
    Patch from Gabor Kelemen.  Fixes bug #450087

2007-06-18  Stef Walter  <stef@memberwebs.com>

    * configure.in: Bump version number

=== seahorse-2.19.4 ===

2007-06-18  Stef Walter  <stef@memberwebs.com>

    * NEWS:
    * README:
    * configure.in: Release 2.19.4

2007-06-18  Adam Schreiber  <sadam@clemson.edu>
    
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-prefs.glade: Add ability to change gnome-keyring
    master password.  Fixes bug #356575 
    * daemon/seahorse-service.c:
    * libseahorse/seahorse-libdialogs.h:
    * libseahorse/seahorse-notification.c: Gives more detail for imported keys 
    when using the DBus interface.  Partially fixes bug #416458

2007-06-14  Adam Schreiber  <sadam@clemson.edu>
    
    * src/seahorse-ssh-key-properties.c: Fix null access while creating window.
    Fixes bug #447450

2007-06-09  Adam Schreiber  <sadam@clemson.edu>
    
    * plugins/nautilus/seahorse-tool-progress.c: Unescape gnome-vfs strings
    before display.  Fixes bug #445769

2007-06-07  Adam Schreiber  <sadam@clemson.edu>
    
    * configure.in: Remove errant pidgin plugin checks.  Fixes bug #445323 
    * agent/seahorse-agent-main.c: Internationalize the notification area.
    Fixes bug #443920

2007-06-06  Adam Schreiber  <sadam@clemson.edu>
    
    * configure.in: