@@ -1,3 +1,10 @@
+2007-07-07  Adam Schreiber  <sadam@clemson.edu>
+    
+    * agent/seahorse-agent-cache.c:
+    * agent/seahorse-agent-ssh.c: When only using the ssh portion of 
+    seahorse-agent, still init the cache.  Patch from Ted Percival.
+    Fixes bug #454469
+
 2007-06-24  Daniel Nylander <po@danielnylander.se>
 
 	* plugins/applet/docs/sv/sv.po: Added Swedish translation
